[package]
name = "harbor"
version = "0.2.0"
edition = "2021"
rust-version = "1.74"
authors = ["Fernando Mendoza"]
description = "See what's docked at every local port — dev servers, databases, and Docker containers, grouped by project."
license = "MIT"
repository = "https://github.com/FerMPY/harbor"
homepage = "https://github.com/FerMPY/harbor"
readme = "README.md"
keywords = ["ports", "tui", "devtools", "processes", "lsof"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".github/", "Formula/", "*.md"]

[[bin]]
name = "harbor"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
serde_json = "1"
sysinfo = "0.33"
listeners = "0.2"
opener = "0.7"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
